// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`06. Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="http://alibaba-inc.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Alibab
</a>
`;

exports[`06. Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="http://alibaba-inc.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Alibab
</a>
`;

exports[`06. Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="http://alibaba-inc.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Alibab
</a>
`;
